--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
 
 :root {
     --dark-blue: #363f5f;
+    --green: #49aa26;
+    --light-green: #3dd705;
+    --red: #e92929;
 }
 
 * {
@@ -11,9 +14,25 @@
     box-sizing: border-box;
 }
 
+html {
+    font-size: 93.75%; /* 15px - Padrão (100%) = 16px*/
+}
+
 body {
     background-color: #f0f2f5;
     font-family: 'Poppins', sans-serif;
+}
+
+.sr-only { /* Está mantendo visível apenas para leitores de tela -> CSS tricks */
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap; 
+    border-width: 0; 
 }
 
 .container {
@@ -30,11 +49,65 @@ h2 {
     font-weight: normal;
 }
 
+/* Links & BUttons ===================== */
+a {
+    color: var(--gree);
+    text-decoration: none;
+}
+
+a:hover {
+    color: var(--light-green);
+}
+
+button {
+    width: 100%;
+    height: 50px;
+
+    border: none;
+
+    color: #fff;
+    background-color: var(--green);
+
+    padding: 0;
+
+    border-radius: 0.25rem;
+
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: var(--light-green);
+}
+
+.button.new {
+    display: inline-block; /* No inline não consigo aplicar margin-botton */
+    margin-bottom: .8rem; 
+}
+
+.button.cancel {
+    color: var(--red);
+    border: 2px solid var(--red);
+    border-radius: 0.25rem;
+
+    height: 50px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    opacity: 0.6;
+}
+
+.button.cancel:hover {
+    opacity: 1;
+}
+
 /* Header ===================== */
 header {
     background-color: #2d4a22;
     padding: 2rem 0 10rem;
     text-align: center;
+    margin-bottom: 2rem;
 }
 
 #logo {
@@ -66,6 +139,10 @@ header {
 .card h3 {
     font-weight: normal;
     font-size: 1rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .card p {
@@ -76,11 +153,17 @@ header {
 }
 
 .card.total {
-    background-color: #49aa26;
+    background-color: var(--green);
     color: #fff;
 }
 
 /* Table ===================== */
+#transaction {
+    display: block;
+    width: 100%; 
+    overflow-x: auto; /* quando transborda no eixo x, ele cria, quando necessario, uma rolagem. FUNCIONA PARA MOBILE*/
+
+}
 #data-table {
     width: 100%; /* pega o espaço inteiro da section (seu pai) */
     border-spacing: 0 0.5rem;
@@ -90,6 +173,11 @@ header {
 table thead tr th:first-child,
 table tbody tr td:first-child {
     border-radius: 0.25rem 0 0 0.25rem;
+}
+
+table thead tr th:last-child,
+table tbody tr td:last-child {
+    border-radius: 0 0.25rem 0.25rem 0;
 }
 
 table thead th {
@@ -123,11 +211,79 @@ td.income {
 }
 
 td.expense {
-    color: #e92929;
+    color: var(--red);
+}
+
+/* Modal ===================== */
+.modal-overlay {
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(0, 0, 0, 0.7);
+
+    position: fixed;
+    top: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    opacity: 0;
+    visibility: hidden;
+
+    z-index: 999;
+}
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal {
+    background-color: #f0f2f5;
+    padding: 2.4rem;
+
+    position: relative;
+    z-index: 1;
+}
+
+/* Form ===================== */
+#form {
+    max-width: 500px;
+}
+
+#form h2 {
+    margin-top: 0;
+}
+
+input {
+    border: none;
+    border-radius: 0.2rem;
+
+    padding: 0.8rem;
+
+    width: 100%;
+}
+
+.input-group {
+    margin-top: 0.8rem;
+}
+
+.input-group small {
+    opacity: 0.4;
+}
+.input-group.actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.input-group.actions .button,
+.input-group.actions button {
+    width: 48%;
 }
 
 /* Footer ===================== */
-
 footer {
     text-align: center;
     padding: 4rem 0 2rem;
@@ -136,5 +292,15 @@ footer {
     opacity: 0.6;
 }
 
+/* Responsive ===================== */
+@media (min-width: 800px) {
+    html {
+        font-size: 87.5%; /* ?px */ /* 14px */
+    }
 
-
+    #balance {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); /* fr = fração. repeat(3, 1fr) = 1fr 1fr 1fr -> ESTUDAR! */
+        gap: 2rem;
+    }
+}
